src/objects/PANG_Request__c.object
<CustomObject>
    <fields>
        <fullName>Molecule_multi__c</fullName>
        <label>Molecule</label>
        <picklist>
            <controllingField>Primary_Therapeutic_Area__c</controllingField>
            <picklistValues>
                <fullName>Abemaciclib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atomoxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAFF-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baricitinib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basal insulin peglispro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blosozumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK4/6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cetuximab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGRP MAb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chk1 inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c-Met inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cMet-Mab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXCR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulaglutide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duloxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edivoxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empagliflozin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferroportin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGF receptor inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galunisertib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gemcitabine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucagon-R antagonist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSK3-beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedgehog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepcidin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humulin U-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humulin U-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icrucumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL-23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulin Isophane</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OAM_Consultation_Comments__c</fullName>
        <label>OAM Consultation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OAM_Consultation__c</fullName>
        <label>OAM Consultation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operation_Team_Review_Date__c</fullName>
        <label>Operation Team Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Conversion_Format__c</fullName>
        <label>Other Conversion Format</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Desired_Location__c</fullName>
        <label>Other Desired Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Location__c</fullName>
        <label>Other Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source_Data_Format__c</fullName>
        <label>Other Source Data Format</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Storage_Location__c</fullName>
        <label>Other Storage Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contacted_Comments__c</fullName>
        <label>Partner Contacted Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contacted__c</fullName>
        <label>Partner Contacted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Interest_Comments__c</fullName>
        <label>Partner Interest Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Quality_Assessment_Comments__c</fullName>
        <label>Partner Quality Assessment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Quality_Assessment__c</fullName>
        <label>Partner Quality Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Community_Space__c</fullName>
        <label>Partnership Community Space</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partnership_Exploration_Initiator__c</fullName>
        <label>Partnership Exploration Initiator</label>
        <picklist>
            <picklistValues>
                <fullName>Lilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Sponsor__c</fullName>
        <label>Partnership Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>SHIRLOC (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROactive (USHO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWE, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPORWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Date_Completed__c</fullName>
        <label>Planned Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Disease_State__c</fullName>
        <label>Primary Disease State</label>
        <picklist>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease -unspecific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Previous request by request name</inlineHelpText>
        <label>Primary Request</label>
        <referenceTo>PANG_Request__c</referenceTo>
        <relationshipLabel>Secondary Requests</relationshipLabel>
        <relationshipName>RWE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_Area__c</fullName>
        <inlineHelpText>Indicate the primary therapeutic area for project</inlineHelpText>
        <label>Primary Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer’s &amp; Neurodegenerative Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry &amp; Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone, Muscle, Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Business Unit-Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_BU__c</fullName>
        <description>Autopopulates the Primary Therapeutic Business Unit based on the Primary Therapeutic Area selected</description>
        <formula>CASE( Primary_Therapeutic_Area__c , &quot;&quot;,&quot;&quot;,&quot;Oncology&quot;, &quot;Oncology&quot;, &quot;Diabetes&quot;, &quot;Diabetes&quot;, &quot;Biomedicines&quot;)</formula>
        <inlineHelpText>Autopopulates the Primary Therapeutic Business Unit based on the Primary Therapeutic Area selected</inlineHelpText>
        <label>Primary Therapeutic BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <inlineHelpText>Suggested completion date of request or response</inlineHelpText>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <label>Protocol</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Status__c</fullName>
        <label>Purchase Status</label>
        <picklist>
            <controllingField>Purchase__c</controllingField>
            <picklistValues>
                <fullName>Pre-Contract Scientific Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Contract Raw Data Technical Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Contract Raw Data Technical Evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <label>Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Data_Extract__c</fullName>
        <label>Purpose of Data Extract</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWA_Statistical_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RWA Statistical Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RWE_Request_Workstream_Group__c</fullName>
        <formula>CASE( RecordType.Name ,



&quot;Data Sourcing&quot;, &quot;Data Sourcing&quot;, 

&quot;RWE Strategic Consultation&quot;, &quot;RWE Strategic Consultation&quot;,

&quot;RWE Partnership Exploration&quot;, &quot;RWE Partnership Exploration&quot;,

&quot;EXPERT Exception&quot;, &quot;Design &amp; Analytics&quot;,

&quot;EXPERT Review&quot;, &quot;Design &amp; Analytics&quot;,

&quot;EXPERT Workstream&quot;, &quot;Design &amp; Analytics&quot;,

&quot;EXPERT or ACT Consultation&quot;, &quot;Design &amp; Analytics&quot;,

&quot;Ops &amp; Execution&quot;


)</formula>
        <label>RWE Request Workstream Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rationale_for_Process_Exception__c</fullName>
        <label>Rationale for Process Exception</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Raw_Data_Extract_Location__c</fullName>
        <label>Raw Data Extract Location</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (Internal - Electron LAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Internal - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (External Use) | Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_for_Final_Storage__c</fullName>
        <label>Ready for Final Storage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_for_Validation__c</fullName>
        <label>Ready for Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Other_Data_Type__c</fullName>
        <label>Reason for Other Data Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Analysis_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate a previous Request that provides the format or design that this Request should follow.</inlineHelpText>
        <label>Reference Analysis Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Real World Data Analysis</value>
            </filterItems>
            <infoMessage>Searches are filtered for other Internal Real World Data Analysis Requests. Remove the filter to search all Requests.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PANG_Request__c</referenceTo>
        <relationshipLabel>Referenced Analysis Requests</relationshipLabel>
        <relationshipName>RWE_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Regions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regulator_HTA_Requirement__c</fullName>
        <inlineHelpText>Is this study to fulfill a regulator/HTA requirement?</inlineHelpText>
        <label>Regulator/HTA Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Research question</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>PANG_Project__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>RWE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <displayFormat>RWE-REQ-{000000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>The status of the request</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Sub_Status__c</fullName>
        <inlineHelpText>Additional status of request</inlineHelpText>
        <label>Request Sub-Status</label>
        <picklist>
            <controllingField>Request_Status__c</controllingField>
            <picklistValues>
                <fullName>Need Values for Your Competency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/Ready for Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feasibility / Counts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-Protocol Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Required</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Functional_Area__c</fullName>
        <description>This is done as we cannot look up this information on the User record</description>
        <inlineHelpText>Functional area of the requestor</inlineHelpText>
        <label>Requestor Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>CDIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPORWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (BIOMETRICS, REGULATORY ETC.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Request contact</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_FDAMA114_Eligible__c</fullName>
        <label>Research FDAMA114 Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Needs__c</fullName>
        <label>Resource Needs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Results_of_Assessment__c</fullName>
        <label>Results of Assessment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Results_of_Evaluation__c</fullName>
        <label>Results of Evaluation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scientist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requestor email notification preference (on submit)</inlineHelpText>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Data_Format__c</fullName>
        <label>Source Data Format</label>
        <picklist>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TXT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statistical_Methods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statistical Methods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_Location_Suggested__c</fullName>
        <label>Storage Location Suggested</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netezza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Fit_Comments__c</fullName>
        <label>Strategic Fit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Study_Alias_Project_ID__c</fullName>
        <inlineHelpText>Study Identifier i.e. Study Alias/BCM/BoB ID or IMPACT #</inlineHelpText>
        <label>Study Alias / Project ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Design_Type__c</fullName>
        <label>Study Design Type</label>
        <picklist>
            <picklistValues>
                <fullName>PMSS Regional Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Non Site Based Observational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Site Based Observational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Analytic Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supporting_Documents__c</fullName>
        <inlineHelpText>To attach a file:
1) Save the request 
2) Upload the document(s) by clicking &quot;File&quot; in the upper left hand corner of the Chatter Feed, click &quot;Share&quot;
3) Repeat the process if there are multiple documents</inlineHelpText>
        <label>Supporting Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temporary_Access__c</fullName>
        <label>Temporary Access</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temporary_Landing_Area_File_Name__c</fullName>
        <label>Temporary Landing Area File Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Customized__c</fullName>
        <label>Term Sheet Customized</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Meeting_Date__c</fullName>
        <label>Term Sheet Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Sent_to_Partner__c</fullName>
        <label>Term Sheet Sent to Partner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Used__c</fullName>
        <label>Term Sheet Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_PE__c</fullName>
        <description>Therapeutic Area picklist used only for Partnership Exploration Requests</description>
        <inlineHelpText>Therapeutic Area picklist used only for Partnership Exploration Requests</inlineHelpText>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer’s &amp; Neurodegenerative Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry &amp; Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone, Muscle, Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Business Unit-Specific</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_BU_PE__c</fullName>
        <description>Therapeutic BU Picklist used only for Partnership Exploration requests</description>
        <inlineHelpText>Therapeutic BU Picklist used only for Partnership Exploration requests</inlineHelpText>
        <label>Therapeutic BU</label>
        <picklist>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomedicines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBU</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Data_Use__c</fullName>
        <inlineHelpText>Will third party personnel be extracted, analyzing, or reporting on data?</inlineHelpText>
        <label>Third Party Data Use</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unsuccessful_Load_Reason__c</fullName>
        <label>Unsuccessful Load Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Data Corrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Match Data Dictionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Approved_Date__c</fullName>
        <label>Validation Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Completion_Date__c</fullName>
        <label>Validation Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Required__c</fullName>
        <inlineHelpText>The data dictionary is required to complete the validation. Attach the data dictionary to the request</inlineHelpText>
        <label>Validation Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validator_Status_Notes__c</fullName>
        <label>Validator Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>